# CodebaseConstellation

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md
.github/: branch-name-enforcement.cutoff.sha
.github/workflows/: validate-branch-name.yml
CodebaseGuide/: README.md  conformance.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
CodebaseGuide/data/: agentscommander.json
CodebaseGuide/docs/: ADR-0001-outline-placement.md  (+2 more)
VisualSpecs/: .gitignore  README.md  conformance.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
crates/constellation-ingest/: Cargo.toml  README.md
crates/constellation-ingest/src/: db.rs  git.rs  lib.rs  main.rs  manifests.rs  model.rs  syntax.rs
crates/constellation-ingest/tests/: conformance.rs
fixtures/: README.md  build_seed.py  seed.sql  seed.sqlite  verify_seed.py
graph-analytics/: .gitignore  README.md  pyproject.toml
graph-analytics/src/constellation_analytics/: __init__.py  analytics.py  blobs.py  cli.py  database.py  findings.py  layout.py  model.py  pipeline.py
graph-analytics/tests/: helpers.py  test_blobs.py  test_pipeline.py  test_spaghetti_diagnostics.py
plan/: 1-enforce-main-pr-branch-names.md  7-collapsible-project-rail.md  9-extract-watch.md  9-follow-file-reload.md
schema/: README.md
scripts/: validate-branch-name.mjs
spec/: blobs.md
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+338 files in other folders)
