[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-constellation-analytics"
version = "0.1.0"
description = "Offline graph analytics and deterministic 3D layout for CodebaseConstellation v1 snapshots"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fa2>=1.1.2,<2",
    "igraph>=1.0,<2",
    "leidenalg>=0.12,<0.13",
    "networkit>=11.2.1,<12",
    "numpy>=2,<3",
    "scipy>=1.14,<2",
]

[project.scripts]
constellation-analytics = "constellation_analytics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
